--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Will you be a part of my next adventure?</p>
         </a>
             </div>
             <div class="card-body">
-              <p class="card-text">A twitter bot built using tweepy from python and node js that automatically tweets about user whose handle is entered.
+              <p class="card-text">A twitter bot built using twitter api with tweepy pkg from python and node js that automatically tweets about user whose handle is entered.
 		    Check out the acc here https://twitter.com/YGluvs2holdhand</p>
 		    
             </div>
