--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Will you be a part of my next adventure?</p>
             </div>
             <div class="card-body">
               <p class="card-text">A twitter bot built using twitter api with tweepy pkg from python and node js that automatically tweets about user whose handle is entered.
-		    Check out the acc here https://twitter.com/YGluvs2holdhand</p>
+		    Check out the acc <a href="https://twitter.com/YGluvs2holdhand">here</a></p>
 		    
             </div>
           </div>
