--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section id="Introduction">
 
 <div class="Title">
-<h1 class ="heading">Hi! I am Shreya, a web designer with a love for cats, kpop and chocolates.</h1>
+<h1 class ="heading">Hi! I am Shreya, a web developer with a love for cats, kpop and chocolates.</h1>
 
 <p class="heading-undertext">I create modern responsive websites from scratch with layouts that are both pretty and meaningful.<br>
 Will you be a part of my next adventure?</p>
@@ -128,14 +128,12 @@ Will you be a part of my next adventure?</p>
 <a href="mailto:toshreyashah@gmail.com" ><button type="button" class="btn btn-md btn-outline-light">Chat</button></a>
 <div class="bot">
   <a href="https://www.linkedin.com/in/thatshreya/"><i class="fab fa-linkedin ctaicons"></i></a>
-  <a href="https://twitter.com/diverheart_here"><i class="fab fa-twitter ctaicons"></i></a>
+  <a href="https://github.com/diverheart"><i class="fab fa-github-square"></i></a>
   <a href="https://www.instagram.com/diverheart/?hl=en"><i class="fab fa-instagram ctaicons"></i></a>
   <p class="cta">©2020 diverheart</p>
 </div>
 </div>
-<div class="oomf">
-	<h1 style="color: white;">@diverheart</h1>
-</div>
+
 </section>
 
 
