--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Will you be a part of my next adventure?</p>
 <a href="mailto:toshreyashah@gmail.com" ><button type="button" class="btn btn-md btn-outline-light">Chat</button></a>
 <div class="bot">
   <a href="https://www.linkedin.com/in/thatshreya/"><i class="fab fa-linkedin ctaicons"></i></a>
-  <a href="https://github.com/diverheart"><i class="fab fa-github-square"></i></a>
+  <a href="https://github.com/diverheart"><i class="fab fa-github-square ctaicons"></i></a>
   <a href="https://www.instagram.com/diverheart/?hl=en"><i class="fab fa-instagram ctaicons"></i></a>
   <p class="cta">©2020 diverheart</p>
 </div>
