--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ Will you be a part of my next adventure?</p>
 <h1 class="heading">If you have made it till here, what are you waiting for?</h1>
 <a href="mailto:toshreyashah@gmail.com" ><button type="button" class="btn btn-md btn-outline-light">Chat</button></a>
 <div class="bot">
-  <a href="https://www.linkedin.com/in/thatshreya/"><i class="fab fa-linkedin ctaicons"></i></a>
-  <a href="https://github.com/diverheart/"><i class="fab fa-github ctaicons"></i></a>
-  <a href="https://www.instagram.com/diverheart/?hl=en"><i class="fab fa-instagram ctaicons"></i></a>
+  <a href="https://www.linkedin.com/in/thatshreya/"><i class="fab fa-linkedin ctaicons fa-2x"></i></a>
+  <a href="https://github.com/diverheart/"><i class="fab fa-github ctaicons fa-2x"></i></a>
+  <a href="https://www.instagram.com/diverheart/?hl=en"><i class="fab fa-instagram ctaicons fa-2x"></i></a>
   <p class="cta">©2020 diverheart</p>
 </div>
 </div>
