--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Will you be a part of my next adventure?</p>
           </div>
         </div>
 		     
-		       <div class="col-md-6">
+		       <div class="col-md-6 col-md-offset-3">
           
           <div class="card h-100">
            <div class="embed-responsive embed-responsive-16by9">
