--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@ Will you be a part of my next adventure?</p>
           
           <div class="card h-100">
           <div class="embed-responsive embed-responsive-16by9">
-        <a href="https://tomato-form.herokuapp.com/">
+        <a href="https://breakingbadchars.netlify.app/">
         	<img class="card-img-top embed-responsive-item"  src="images/t.png">
         </a>
             </div>
             <div class="card-body">
-              <p class="card-text">A sign-up and login component built using Node js backed up with MongoDB database.</p>
+              <p class="card-text">Used React and the breaking bad API to create a small app to show and filter the character information with pagination hosted onnetlify</p>
             </div>
           </div> 
 <!-- 		      here
