--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section id="Introduction">
 
 <div class="Title">
-<h1 class ="heading">Hi! I am Shreya, a web developer with a love for cats, kpop and chocolates.</h1>
+<h1 class ="heading">Hi! I am Shreya, a full-stack web developer.</h1>
 
 <p class="heading-undertext">I create modern responsive websites from scratch with layouts that are both pretty and meaningful.<br>
 Will you be a part of my next adventure?</p>
